--- a/dev/common/main.scss
+++ b/dev/common/main.scss
@@ -33,6 +33,7 @@ $phones: 480px;
 @import '../components/footer/footer';
 @import '../components/arrow/arrow';
 @import '../components/map/map';
+@import '../components/full menu/full__menu';
 
 //index
 @import '../pages/index/index';
