--- a/dev/components/header/header.pug
+++ b/dev/components/header/header.pug
@@ -5,8 +5,8 @@ section.header.paralax__effect--scroll(data-speed=
         div.header__social__block
             include ../../components/social__list/_social__list
         div.hamburger__menu.header__hamburger__menu
-            a.hamburger-menu-link(href='#')
-                div.hamburger-menu-link__bars
+            a.hamburger__menu-link(href='#')
+                div.hamburger__menu-link__bars
     div.header__persone
         include ../../components/persone/persone
     div.header__arrow__down
