--- a/dev/pages/works/works.pug
+++ b/dev/pages/works/works.pug
@@ -50,3 +50,4 @@ block content
                                 button.form__btn(type='reset')
                                     div.form__link.form__link--center Очистить
         include ../../components/footer/_footer
+    include  ../../components/full menu/full__menu
