--- a/dev/components/full menu/full__menu.pug
+++ b/dev/components/full menu/full__menu.pug
@@ -3,10 +3,10 @@ aside#full__menu.full__menu.visuallyhidden
         span.close-icon
     ul.full__menu-list
         li.full__menu-item
-            a.full__menu-link(href='#') Мои работы
+            a.full__menu-link(href='works.html') Мои работы
         li.full__menu-item
-            a.full__menu-link(href='#') Обо мне
+            a.full__menu-link(href='about.html') Обо мне
         li.full__menu-item
-            a.full__menu-link(href='#') Блог
+            a.full__menu-link(href='blog.html') Блог
         li.full__menu-item
-            a.full__menu-link(href='#') Авторизация
+            a.full__menu-link(href='index.html') Авторизация
