--- a/dev/pages/about/about.pug
+++ b/dev/pages/about/about.pug
@@ -52,3 +52,4 @@ block content
                     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC_CAeQUG0TIsrm45B2YViKvjJEz8zxZY0&callback=initMap', async defer)
             section
                 include ../../components/footer/_footer
+    include  ../../components/full menu/full__menu
