--- a/dev/components/full menu/full__menu.scss
+++ b/dev/components/full menu/full__menu.scss
@@ -6,13 +6,13 @@
   top: 0;
   width:100%;
   height:100%;
-  background: transparentize($green, .3);
+  background: transparentize($green, .2);
   z-index: 998;
   overflow: hidden;
 }
 
 .full__menu-list {
-  margin: 34% auto 0;
+  margin: auto;
   font-size: rem(24px);
   display: flex;
   flex-direction: column;
@@ -22,37 +22,36 @@
 }
 
 .full__menu-item {
-  margin: 0 0 50px 0;
-  &:last-child{
+  margin: 35px 0 0 0;
+  width: 70px;
+  height: 50px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  &:first-child{
     margin: 0;
   }
   @include phones{
     margin: 0 0 53px 0;
   }
-  &:before {
-    content: '';
-    position: absolute;
-    display: inline-block;
-    width: 6px;
-    height: 6px;
-    left: 50%;
-    background: $white;
-    border-radius: 50%;
-    margin: -26px 0 0 0;
-  }
-  &:first-child:before {
-    display: none;
-  }
 }
 
 .full__menu-link {
   color: $white;
+  white-space: nowrap;
+  &:hover{
+    content: "";
+    display: flex;
+    width: 70px;
+    border-bottom: 2px solid #ffffff;
+    justify-content: center;
+  }
 }
 
 .full__menu-close {
   position: absolute;
-  right: -9px;
-  top: 90px;
+  right: 1.2%;
+  top: 9.9%;
   cursor: pointer;
   @include phones{
     right: -19px;
