--- a/dev/pages/blog/blog.scss
+++ b/dev/pages/blog/blog.scss
@@ -5,11 +5,23 @@
   padding: 40px 0;
   &__col__left {
     width: 20%;
+    @include tablets{
+      display: none;
+    }
+    @include phones{
+      display: none;
+    }
   }
   &__col__right {
     display: flex;
     flex-direction: column;
     width: 80%;
+    @include tablets{
+      width: 100%;
+    }
+    @include phones{
+      width: 100%;
+    }
   }
 
   &__nav__item {
@@ -48,6 +60,12 @@
   &__container {
     width: 60%;
     margin: auto;
+    @include tablets{
+      width: 85%;
+    }
+    @include phones{
+      width: 85%;
+    }
   }
 
   &:after {
@@ -81,14 +99,14 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  left: 0;
+  left: -290px;
   top: 0;
   bottom: 0;
   background: $green;
   width: 290px;
 
   &__list{
-    margin: 0 25px 0 0;
+    margin: 0;
   }
 
   &__item {
@@ -116,5 +134,9 @@
     border-radius: 50%;
     left: 5%;
     position: relative;
+    cursor: pointer;
   }
+}
+.swipe__sidebar--open{
+  left: 0;
 }
